Infrastructure/infra_template/ec2.tf
resource "aws_key_pair" "my_ssh_key" {
	key_name = "${var.my_env}-terra-key"
	public_key = file("/Users/ruchalisudke/terra-key.pub")
}
resource "aws_default_vpc" "default" {
}

resource "aws_security_group" "new_sg" {
	name = "${var.my_env}-sg"
	description = "This is a security group used to practise terraform"
	vpc_id = aws_default_vpc.default.id

	ingress {
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
		description = "This is for SSH Access"
	}
 	ingress {
                from_port = 80
                to_port = 80
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
                description = "This is for HTTP Access"
        }
	
	egress {
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
		description = "This is for outside world requests from instance"
	}
}
resource "aws_instance" "practiceinstance" {
	count = var.ec2_count
	tags = {
                Name = "${var.my_env}-ec2-server"
        }
	ami = var.ec2_ami_id
	instance_type = var.ec2_instance_type
	key_name = aws_key_pair.my_ssh_key.key_name
	security_groups = [aws_security_group.new_sg.name]
}

resource "aws_ec2_instance_state" "my_state" {
	count = length(aws_instance.practiceinstance)
	instance_id = element(aws_instance.practiceinstance.*.id, count.index)
	state = "running"
}
